# nmsmc

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-release.yml
cmake/Toolchains/: Toolchain-cross-mingw.cmake
examples/: CompanionPetUnlocker.def  CompanionPetUnlocker.inc  CompanionPetUnlocker_InteractionAction.inc  CompanionPetUnlocker_JointCommon.inc  Exosolar_s_Clear_Scanner_and_Surveyor.def  Exosolar_s_Clear_Scanner_and_Surveyor.inc  SplinterGU_ClearWater.def  SplinterGU_ClearWater.inc  SplinterGU_InstantScan.def  SplinterGU_InstantScan.inc  SplinterGU_StackX100.def  SplinterGU_StackX100.inc  SplinterGU_SuperMod.def
src/: common.h  definition.c  definition.h  fs_utils.c  fs_utils.h  main.c  misc.c  misc.h  spawn.c  spawn.h
